--- a/new.html
+++ b/new.html
@@ -16,11 +16,15 @@
     <div class="form-section active" id="login-section">
       <h3>Login</h3>
       <form id="login-form">
-        <div class="input_container">
+          <div class="input_container">
+          <input class="input-field" type="text" id="login-password" placeholder=" " required>
+          <label class="input-label">Username</label>
+        </div>
+          <div class="input_container">
           <input class="input-field" type="email" id="login-email" placeholder=" " required>
           <label class="input-label">Email</label>
         </div>
-        <div class="input_container">
+          <div class="input_container">
           <input class="input-field" type="password" id="login-password" placeholder=" " required>
           <label class="input-label">Password</label>
         </div>
