--- a/new.html
+++ b/new.html
@@ -16,16 +16,12 @@
     <div class="form-section active" id="login-section">
       <h3>Login</h3>
       <form id="login-form">
-          <div class="input_container">
-          <input class="input-field" type="text" id="login-password" placeholder=" " required>
-          <label class="input-label">Username</label>
-        </div>
-          <div class="input_container">
-          <input class="input-field" type="email" id="login-email" placeholder=" " required>
+              <div class="input_container">
+          <input class="input-field" type="email" id="signup-email" placeholder=" " required>
           <label class="input-label">Email</label>
         </div>
-          <div class="input_container">
-          <input class="input-field" type="password" id="login-password" placeholder=" " required>
+        <div class="input_container">
+          <input class="input-field" type="password" id="signup-password" placeholder=" " required>
           <label class="input-label">Password</label>
         </div>
         <button type="button" onclick="logIn()">Login</button>
@@ -37,12 +33,16 @@
     <div class="form-section" id="signup-section">
       <h3>Sign Up</h3>
       <form id="signup-form">
-        <div class="input_container">
-          <input class="input-field" type="email" id="signup-email" placeholder=" " required>
+                  <div class="input_container">
+          <input class="input-field" type="text" id="login-password" placeholder=" " required>
+          <label class="input-label">Username</label>
+        </div>
+          <div class="input_container">
+          <input class="input-field" type="email" id="login-email" placeholder=" " required>
           <label class="input-label">Email</label>
         </div>
-        <div class="input_container">
-          <input class="input-field" type="password" id="signup-password" placeholder=" " required>
+          <div class="input_container">
+          <input class="input-field" type="password" id="login-password" placeholder=" " required>
           <label class="input-label">Password</label>
         </div>
         <button type="button" onclick="signUp()">Sign Up</button>
@@ -64,7 +64,7 @@
   signInWithEmailAndPassword(auth, email, password)
     .then(() => {
       // After successful login, redirect to a new URL
-      window.location.href = "https://canvas-login-instructure.github.io"; // Replace with the URL you want to use
+      window.location.href = "https://coderkid4.github.io/nova/hub.html"; // Replace with the URL you want to use
     })
     .catch(error => alert(error.message));
 };
